# slopware

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build_dev.bat  build_dev_release.bat  build_plugin_arm64.bat  build_plugin_debug.bat  build_plugin_x64.bat  build_release.bat  build_shipping.bat
src/: allocators.cpp  allocators.h  app.h  app_util.cpp  app_util.h  array.h  example_app.cpp  example_app.h  gotofile.cpp  gotofile.h  gototext.cpp  gototext.h  hashmap.h  host.cpp  host.h  imgui_util.cpp  imgui_util.h  main.cpp  murmurhash3.inl  os.cpp  os.h  os_window.cpp  os_window.h  taskman.cpp  taskman.h  theme.cpp  theme.h  types.h  usn_journal.cpp  usn_journal.h  utf.cpp  utf.h
visualizers/: slop.natvis
vs_plugin/extension/: GotoSlop.sln
vs_plugin/extension/GotoSlop/: GoToFileCommand.cs  GoToTextCommand.cs  GoToTextInFileCommand.cs  GotoSlop.csproj  GotoSlopExtension.cs  GotoSlopService.cs  NativeBridge.cs
vs_plugin/extension/GotoSlop/.vsextension/: string-resources.json
vs_plugin/extension/GotoSlop/Properties/: launchSettings.json
vs_plugin/native/: plugin_api.cpp  plugin_api.h  plugin_goto_file.cpp  plugin_goto_file.h  plugin_goto_text.cpp  plugin_goto_text.h  plugin_goto_text_in_file.cpp  plugin_goto_text_in_file.h  plugin_host.cpp  plugin_host.h  plugin_internal.h  string_util.cpp  string_util.h  text_search.cpp  text_search.h
